Fix flex pane header color for close button and link

--- a/css/raw/variants/aubergine-monospaced.css
+++ b/css/raw/variants/aubergine-monospaced.css
@@ -2389,6 +2389,8 @@ span.match { background: rgba(191, 54, 12, 0.25); }
 
 .c-unified_member__display-name, .c-unified_member__secondary-name, .c-unified_member__title, .c-unified_member__other-names, .c-unified_member__other-names { color: #f0d9ed !important; }
 
+#convo_tab .p-flexpane_header .p-threads_flexpane__header_channel_name, #convo_tab .p-flexpane_header .p-flexpane_header__control { color: #f0d9ed; }
+
 #convo_tab #convo_tab_btns .close_flexpane:focus, #convo_tab #convo_tab_btns .close_flexpane:hover { color: #f0d9ed; }
 
 #convo_tab textarea.message_input { color: #f0d9ed; }
