--- a/css/variants/arc-dark.css
+++ b/css/variants/arc-dark.css
@@ -1193,6 +1193,7 @@
   #client-ui .searchable_member_list .team_list_item { border-bottom-color: #1d2027; }
   #client-ui .searchable_member_list .team_list_item:hover { background: #6b6f79; }
   .c-unified_member__display-name, .c-unified_member__secondary-name, .c-unified_member__title, .c-unified_member__other-names, .c-unified_member__other-names { color: #d3dae3 !important; }
+  #convo_tab .p-flexpane_header .p-threads_flexpane__header_channel_name, #convo_tab .p-flexpane_header .p-flexpane_header__control { color: #d3dae3; }
   #convo_tab #convo_tab_btns .close_flexpane:focus, #convo_tab #convo_tab_btns .close_flexpane:hover { color: #d3dae3; }
   #convo_tab textarea.message_input { color: #d3dae3; }
   #reply_container .inline_message_input_container .message_input div, #reply_container .inline_message_input_container textarea, .reply_input_container .inline_message_input_container .message_input div, .reply_input_container .inline_message_input_container textarea { border-color: #2a2f39; color: #d3dae3; }
