--- a/css/variants/midnight-blue.css
+++ b/css/variants/midnight-blue.css
@@ -1193,6 +1193,7 @@
   #client-ui .searchable_member_list .team_list_item { border-bottom-color: #101010; }
   #client-ui .searchable_member_list .team_list_item:hover { background: #282828; }
   .c-unified_member__display-name, .c-unified_member__secondary-name, .c-unified_member__title, .c-unified_member__other-names, .c-unified_member__other-names { color: #00b9f2 !important; }
+  #convo_tab .p-flexpane_header .p-threads_flexpane__header_channel_name, #convo_tab .p-flexpane_header .p-flexpane_header__control { color: #00b9f2; }
   #convo_tab #convo_tab_btns .close_flexpane:focus, #convo_tab #convo_tab_btns .close_flexpane:hover { color: #00b9f2; }
   #convo_tab textarea.message_input { color: #00b9f2; }
   #reply_container .inline_message_input_container .message_input div, #reply_container .inline_message_input_container textarea, .reply_input_container .inline_message_input_container .message_input div, .reply_input_container .inline_message_input_container textarea { border-color: #181818; color: #00b9f2; }
