--- a/css/raw/variants/arc-dark.css
+++ b/css/raw/variants/arc-dark.css
@@ -1617,19 +1617,27 @@ body > pre { background: #858991; }
 
 .special_formatting_quote .quote_bar { background-color: #6b6f79; }
 
-#threads_msgs_scroller_div { background: #404552; }
+#p_thread_view_container .p-threads_view { background: #404552; }
 
-#threads_msgs_scroller_div:not(.loading)::before { background: #404552; }
+#p_thread_view_container .p-threads_view:not(.loading)::before { background: #404552; }
 
-#threads_msgs_scroller_div.loading::before { color: #949494; }
+#p_thread_view_container .p-threads_view.loading::before { color: #949494; }
 
-#threads_msgs_scroller_div .threads_caught_up_divider .divider_line { border-top: 1px solid #2a2f39; }
+#p_thread_view_container .p-threads_view .threads_caught_up_divider .divider_line { border-top: 1px solid #2a2f39; }
 
-#threads_msgs_scroller_div .threads_caught_up_divider .divider_label { background: #6b6f79; color: #d3dae3; }
+#p_thread_view_container .p-threads_view .threads_caught_up_divider .divider_label { background: #6b6f79; color: #d3dae3; }
 
-#threads_msgs_scroller_div.loading { background: none; }
+#p_thread_view_container .p-threads_view.loading { background: none; }
 
-#threads_msgs_scroller_div.loading::before { color: #d3dae3; }
+#p_thread_view_container .p-threads_view.loading::before { color: #d3dae3; }
+
+#p_thread_view_container .p-threads_view .c-virtual_list .c-virtual_list__item .p-threads_view_header .p-threads_view_header__permalink { color: #90939b !important; }
+
+#p_thread_view_container .p-threads_view .c-virtual_list .c-virtual_list__item .p-threads_view_header .p-threads_view_header__permalink:focus, #p_thread_view_container .p-threads_view .c-virtual_list .c-virtual_list__item .p-threads_view_header .p-threads_view_header__permalink:hover, #p_thread_view_container .p-threads_view .c-virtual_list .c-virtual_list__item .p-threads_view_header .p-threads_view_header__permalink:visited { color: #90939b !important; }
+
+#p_thread_view_container .p-threads_view .c-virtual_list .c-virtual_list__item .p-threads_view_header .p-threads_view_header__permalink .c-channel_name { color: inherit; }
+
+#p_thread_view_container .p-threads_view .c-virtual_list .c-virtual_list__item .p-thread_participant_list { color: #d3dae3; }
 
 #threads_view_banner.messages_banner { background: #2a2f39; }
 
