--- a/css/variants/aubergine-monospaced.css
+++ b/css/variants/aubergine-monospaced.css
@@ -811,13 +811,17 @@
   #page pre, body > pre { background: #372c36; color: #f0d9ed !important; }
   body > pre { background: #876484; }
   .special_formatting_quote .quote_bar { background-color: #61485e; }
-  #threads_msgs_scroller_div { background: #3e313c; }
-  #threads_msgs_scroller_div:not(.loading)::before { background: #3e313c; }
-  #threads_msgs_scroller_div.loading::before { color: #a3839f; }
-  #threads_msgs_scroller_div .threads_caught_up_divider .divider_line { border-top: 1px solid #4d394b; }
-  #threads_msgs_scroller_div .threads_caught_up_divider .divider_label { background: #61485e; color: #f0d9ed; }
-  #threads_msgs_scroller_div.loading { background: none; }
-  #threads_msgs_scroller_div.loading::before { color: #f0d9ed; }
+  #p_thread_view_container .p-threads_view { background: #3e313c; }
+  #p_thread_view_container .p-threads_view:not(.loading)::before { background: #3e313c; }
+  #p_thread_view_container .p-threads_view.loading::before { color: #a3839f; }
+  #p_thread_view_container .p-threads_view .threads_caught_up_divider .divider_line { border-top: 1px solid #4d394b; }
+  #p_thread_view_container .p-threads_view .threads_caught_up_divider .divider_label { background: #61485e; color: #f0d9ed; }
+  #p_thread_view_container .p-threads_view.loading { background: none; }
+  #p_thread_view_container .p-threads_view.loading::before { color: #f0d9ed; }
+  #p_thread_view_container .p-threads_view .c-virtual_list .c-virtual_list__item .p-threads_view_header .p-threads_view_header__permalink { color: #a3839f !important; }
+  #p_thread_view_container .p-threads_view .c-virtual_list .c-virtual_list__item .p-threads_view_header .p-threads_view_header__permalink:focus, #p_thread_view_container .p-threads_view .c-virtual_list .c-virtual_list__item .p-threads_view_header .p-threads_view_header__permalink:hover, #p_thread_view_container .p-threads_view .c-virtual_list .c-virtual_list__item .p-threads_view_header .p-threads_view_header__permalink:visited { color: #a3839f !important; }
+  #p_thread_view_container .p-threads_view .c-virtual_list .c-virtual_list__item .p-threads_view_header .p-threads_view_header__permalink .c-channel_name { color: inherit; }
+  #p_thread_view_container .p-threads_view .c-virtual_list .c-virtual_list__item .p-thread_participant_list { color: #f0d9ed; }
   #threads_view_banner.messages_banner { background: #4d394b; }
   #threads_view_banner.messages_banner:hover { background: #61485e; }
   #threads_view_banner.messages_banner:hover .clear_unread_messages { background: #61485e; }
