--- a/css/raw/variants/solarized-dark.css
+++ b/css/raw/variants/solarized-dark.css
@@ -2543,7 +2543,7 @@ input[type="text"].p-emoji_picker__input:focus { border-color: #003340; box-shad
 
 .current_status_input_for_team_menu .current_status_presets .current_status_presets_section_header .header_label { color: #2aa198; }
 
-.rxn, .c-reaction, .c-reaction_add, .c-member_slug { background: #00232c; border: 1px solid #003340; }
+.rxn, .c-reaction, .c-reaction_add, .c-member_slug { background: #00232c; border: 1px solid #003340; color: #a1adad; }
 
 .rxn.active, .rxn:hover, .c-reaction.active, .c-reaction:hover, .c-reaction_add.active, .c-reaction_add:hover, .c-member_slug.active, .c-member_slug:hover { background: #002b36; }
 
@@ -2556,6 +2556,8 @@ input[type="text"].p-emoji_picker__input:focus { border-color: #003340; box-shad
 .rxn .emoji_rxn_count, .rxn .c-reaction__count, .c-reaction .emoji_rxn_count, .c-reaction .c-reaction__count, .c-reaction_add .emoji_rxn_count, .c-reaction_add .c-reaction__count, .c-member_slug .emoji_rxn_count, .c-member_slug .c-reaction__count { color: #a1adad; }
 
 .rxn.menu_rxn .ts_icon, .c-reaction.menu_rxn .ts_icon, .c-reaction_add.menu_rxn .ts_icon, .c-member_slug.menu_rxn .ts_icon { color: rgba(161, 173, 173, 0.25); }
+
+.rxn .c-reaction_add__icon--fg, .c-reaction .c-reaction_add__icon--fg, .c-reaction_add .c-reaction_add__icon--fg, .c-member_slug .c-reaction_add__icon--fg { color: #268bd2; }
 
 a.c-member_slug--mention, a.c-member_slug--mention:hover { background-color: #b58900; color: #00232c; }
 
