--- a/css/raw/variants/aubergine.css
+++ b/css/raw/variants/aubergine.css
@@ -2543,7 +2543,7 @@ input[type="text"].p-emoji_picker__input:focus { border-color: #61485e; box-shad
 
 .current_status_input_for_team_menu .current_status_presets .current_status_presets_section_header .header_label { color: #a3839f; }
 
-.rxn, .c-reaction, .c-reaction_add, .c-member_slug { background: #4d394b; border: 1px solid #61485e; }
+.rxn, .c-reaction, .c-reaction_add, .c-member_slug { background: #4d394b; border: 1px solid #61485e; color: #f0d9ed; }
 
 .rxn.active, .rxn:hover, .c-reaction.active, .c-reaction:hover, .c-reaction_add.active, .c-reaction_add:hover, .c-member_slug.active, .c-member_slug:hover { background: #4a3b49; }
 
@@ -2556,6 +2556,8 @@ input[type="text"].p-emoji_picker__input:focus { border-color: #61485e; box-shad
 .rxn .emoji_rxn_count, .rxn .c-reaction__count, .c-reaction .emoji_rxn_count, .c-reaction .c-reaction__count, .c-reaction_add .emoji_rxn_count, .c-reaction_add .c-reaction__count, .c-member_slug .emoji_rxn_count, .c-member_slug .c-reaction__count { color: #f0d9ed; }
 
 .rxn.menu_rxn .ts_icon, .c-reaction.menu_rxn .ts_icon, .c-reaction_add.menu_rxn .ts_icon, .c-member_slug.menu_rxn .ts_icon { color: rgba(240, 217, 237, 0.25); }
+
+.rxn .c-reaction_add__icon--fg, .c-reaction .c-reaction_add__icon--fg, .c-reaction_add .c-reaction_add__icon--fg, .c-member_slug .c-reaction_add__icon--fg { color: #a3839f; }
 
 a.c-member_slug--mention, a.c-member_slug--mention:hover { background-color: #fff6d1; color: #4d394b; }
 
