--- a/css/raw/variants/solarized-light.css
+++ b/css/raw/variants/solarized-light.css
@@ -1177,6 +1177,8 @@ ts-mention { background: rgba(255, 254, 251, 0.1) !important; color: #586e75 !im
 @keyframes border_focus_animation { 0% { box-shadow: 0 0 4px 0.25px #fef9ed, 0 0 0 0.5px #fffefb; }
   100% { box-shadow: 0 0 4px 0 #fef9ed, 0 0 0 0 #fffefb; } }
 
+.p-threads_view { background-color: #fdf6e3; }
+
 .c-message_attachment { color: #586e75; }
 
 .c-message_attachment__border { background-color: #fef9ed; }
@@ -1616,8 +1618,6 @@ pre span.mention { padding: 2px 0 !important; }
 body > pre { background: #fffefb; }
 
 .special_formatting_quote .quote_bar { background-color: #fef9ed; }
-
-#p_thread_view_container .p-threads_view { background: #fdf6e3; }
 
 #p_thread_view_container .p-threads_view:not(.loading)::before { background: #fdf6e3; }
 
