--- a/css/variants/solarized-dark.css
+++ b/css/variants/solarized-dark.css
@@ -589,6 +589,7 @@
     100% { background: transparent; } }
   @keyframes border_focus_animation { 0% { box-shadow: 0 0 4px 0.25px #003340, 0 0 0 0.5px #003f50; }
     100% { box-shadow: 0 0 4px 0 #003340, 0 0 0 0 #003f50; } }
+  .p-threads_view { background-color: #002b36; }
   .c-message_attachment { color: #a1adad; }
   .c-message_attachment__border { background-color: #003340; }
   .c-message_attachment__delete { color: #268bd2; }
@@ -809,7 +810,6 @@
   #page pre, body > pre { background: #00171d; color: #a1adad !important; }
   body > pre { background: #003f50; }
   .special_formatting_quote .quote_bar { background-color: #003340; }
-  #p_thread_view_container .p-threads_view { background: #002b36; }
   #p_thread_view_container .p-threads_view:not(.loading)::before { background: #002b36; }
   #p_thread_view_container .p-threads_view.loading::before { color: #2aa198; }
   #p_thread_view_container .p-threads_view .threads_caught_up_divider .divider_line { border-top: 1px solid #00232c; }
