--- a/scss/modules/messaging/_base.scss
+++ b/scss/modules/messaging/_base.scss
@@ -723,3 +723,7 @@ ts-mention {
     box-shadow: 0 0 4px 0 $color-shade-light, 0 0 0 0 $color-shade-lightest;
   }
 }
+
+.p-threads_view {
+  background-color: $color-base;
+}
