--- a/css/raw/variants/midnight-blue-monospaced.css
+++ b/css/raw/variants/midnight-blue-monospaced.css
@@ -1177,6 +1177,8 @@ ts-mention { background: rgba(48, 48, 48, 0.1) !important; color: #00b9f2 !impor
 @keyframes border_focus_animation { 0% { box-shadow: 0 0 4px 0.25px #282828, 0 0 0 0.5px #303030; }
   100% { box-shadow: 0 0 4px 0 #282828, 0 0 0 0 #303030; } }
 
+.p-threads_view { background-color: #000; }
+
 .c-message_attachment { color: #00b9f2; }
 
 .c-message_attachment__border { background-color: #282828; }
@@ -1620,8 +1622,6 @@ pre span.mention { padding: 2px 0 !important; }
 body > pre { background: #303030; }
 
 .special_formatting_quote .quote_bar { background-color: #282828; }
-
-#p_thread_view_container .p-threads_view { background: #000; }
 
 #p_thread_view_container .p-threads_view:not(.loading)::before { background: #000; }
 
