--- a/css/variants/aubergine-monospaced.css
+++ b/css/variants/aubergine-monospaced.css
@@ -589,6 +589,7 @@
     100% { background: transparent; } }
   @keyframes border_focus_animation { 0% { box-shadow: 0 0 4px 0.25px #61485e, 0 0 0 0.5px #876484; }
     100% { box-shadow: 0 0 4px 0 #61485e, 0 0 0 0 #876484; } }
+  .p-threads_view { background-color: #3e313c; }
   .c-message_attachment { color: #f0d9ed; }
   .c-message_attachment__border { background-color: #61485e; }
   .c-message_attachment__delete { color: #a3839f; }
@@ -811,7 +812,6 @@
   #page pre, body > pre { background: #372c36; color: #f0d9ed !important; }
   body > pre { background: #876484; }
   .special_formatting_quote .quote_bar { background-color: #61485e; }
-  #p_thread_view_container .p-threads_view { background: #3e313c; }
   #p_thread_view_container .p-threads_view:not(.loading)::before { background: #3e313c; }
   #p_thread_view_container .p-threads_view.loading::before { color: #a3839f; }
   #p_thread_view_container .p-threads_view .threads_caught_up_divider .divider_line { border-top: 1px solid #4d394b; }
