--- a/css/variants/black-monospaced.css
+++ b/css/variants/black-monospaced.css
@@ -589,6 +589,7 @@
     100% { background: transparent; } }
   @keyframes border_focus_animation { 0% { box-shadow: 0 0 4px 0.25px #545454, 0 0 0 0.5px #828282; }
     100% { box-shadow: 0 0 4px 0 #545454, 0 0 0 0 #828282; } }
+  .p-threads_view { background-color: #222; }
   .c-message_attachment { color: #e6e6e6; }
   .c-message_attachment__border { background-color: #545454; }
   .c-message_attachment__delete { color: #949494; }
@@ -811,7 +812,6 @@
   #page pre, body > pre { background: #000; color: #e6e6e6 !important; }
   body > pre { background: #828282; }
   .special_formatting_quote .quote_bar { background-color: #545454; }
-  #p_thread_view_container .p-threads_view { background: #222; }
   #p_thread_view_container .p-threads_view:not(.loading)::before { background: #222; }
   #p_thread_view_container .p-threads_view.loading::before { color: #949494; }
   #p_thread_view_container .p-threads_view .threads_caught_up_divider .divider_line { border-top: 1px solid #363636; }
