--- a/css/variants/midnight-blue.css
+++ b/css/variants/midnight-blue.css
@@ -589,6 +589,7 @@
     100% { background: transparent; } }
   @keyframes border_focus_animation { 0% { box-shadow: 0 0 4px 0.25px #282828, 0 0 0 0.5px #303030; }
     100% { box-shadow: 0 0 4px 0 #282828, 0 0 0 0 #303030; } }
+  .p-threads_view { background-color: #000; }
   .c-message_attachment { color: #00b9f2; }
   .c-message_attachment__border { background-color: #282828; }
   .c-message_attachment__delete { color: #1793d1; }
@@ -809,7 +810,6 @@
   #page pre, body > pre { background: #101010; color: #00b9f2 !important; }
   body > pre { background: #303030; }
   .special_formatting_quote .quote_bar { background-color: #282828; }
-  #p_thread_view_container .p-threads_view { background: #000; }
   #p_thread_view_container .p-threads_view:not(.loading)::before { background: #000; }
   #p_thread_view_container .p-threads_view.loading::before { color: #1793d1; }
   #p_thread_view_container .p-threads_view .threads_caught_up_divider .divider_line { border-top: 1px solid #181818; }
