--- a/css/variants/solarized-light.css
+++ b/css/variants/solarized-light.css
@@ -810,6 +810,7 @@
   #page pre, body > pre { background: #fbeecb; color: #586e75 !important; }
   body > pre { background: #fffefb; }
   .special_formatting_quote .quote_bar { background-color: #fef9ed; }
+  #p_thread_view_container .p-threads_view .p-threads_view__default_background { background-color: #fdf6e3; }
   #p_thread_view_container .p-threads_view:not(.loading)::before { background: #fdf6e3; }
   #p_thread_view_container .p-threads_view.loading::before { color: #2aa198; }
   #p_thread_view_container .p-threads_view .threads_caught_up_divider .divider_line { border-top: 1px solid #fcf3d9; }
