--- a/css/raw/black.css
+++ b/css/raw/black.css
@@ -1619,6 +1619,8 @@ body > pre { background: #828282; }
 
 .special_formatting_quote .quote_bar { background-color: #545454; }
 
+#p_thread_view_container .p-threads_view .p-threads_view__default_background { background-color: #222; }
+
 #p_thread_view_container .p-threads_view:not(.loading)::before { background: #222; }
 
 #p_thread_view_container .p-threads_view.loading::before { color: #949494; }
