--- a/css/raw/variants/arc-dark.css
+++ b/css/raw/variants/arc-dark.css
@@ -1619,6 +1619,8 @@ body > pre { background: #858991; }
 
 .special_formatting_quote .quote_bar { background-color: #6b6f79; }
 
+#p_thread_view_container .p-threads_view .p-threads_view__default_background { background-color: #404552; }
+
 #p_thread_view_container .p-threads_view:not(.loading)::before { background: #404552; }
 
 #p_thread_view_container .p-threads_view.loading::before { color: #949494; }
