--- a/css/raw/variants/midnight-blue.css
+++ b/css/raw/variants/midnight-blue.css
@@ -1619,6 +1619,8 @@ body > pre { background: #303030; }
 
 .special_formatting_quote .quote_bar { background-color: #282828; }
 
+#p_thread_view_container .p-threads_view .p-threads_view__default_background { background-color: #000; }
+
 #p_thread_view_container .p-threads_view:not(.loading)::before { background: #000; }
 
 #p_thread_view_container .p-threads_view.loading::before { color: #1793d1; }
