--- a/css/raw/variants/solarized-dark.css
+++ b/css/raw/variants/solarized-dark.css
@@ -1619,6 +1619,8 @@ body > pre { background: #003f50; }
 
 .special_formatting_quote .quote_bar { background-color: #003340; }
 
+#p_thread_view_container .p-threads_view .p-threads_view__default_background { background-color: #002b36; }
+
 #p_thread_view_container .p-threads_view:not(.loading)::before { background: #002b36; }
 
 #p_thread_view_container .p-threads_view.loading::before { color: #2aa198; }
