--- a/css/variants/arc-dark.css
+++ b/css/variants/arc-dark.css
@@ -810,6 +810,7 @@
   #page pre, body > pre { background: #1d2027; color: #d3dae3 !important; }
   body > pre { background: #858991; }
   .special_formatting_quote .quote_bar { background-color: #6b6f79; }
+  #p_thread_view_container .p-threads_view .p-threads_view__default_background { background-color: #404552; }
   #p_thread_view_container .p-threads_view:not(.loading)::before { background: #404552; }
   #p_thread_view_container .p-threads_view.loading::before { color: #949494; }
   #p_thread_view_container .p-threads_view .threads_caught_up_divider .divider_line { border-top: 1px solid #2a2f39; }
