--- a/css/variants/aubergine.css
+++ b/css/variants/aubergine.css
@@ -810,6 +810,7 @@
   #page pre, body > pre { background: #372c36; color: #f0d9ed !important; }
   body > pre { background: #876484; }
   .special_formatting_quote .quote_bar { background-color: #61485e; }
+  #p_thread_view_container .p-threads_view .p-threads_view__default_background { background-color: #3e313c; }
   #p_thread_view_container .p-threads_view:not(.loading)::before { background: #3e313c; }
   #p_thread_view_container .p-threads_view.loading::before { color: #a3839f; }
   #p_thread_view_container .p-threads_view .threads_caught_up_divider .divider_line { border-top: 1px solid #4d394b; }
