--- a/css/variants/solarized-dark.css
+++ b/css/variants/solarized-dark.css
@@ -810,6 +810,7 @@
   #page pre, body > pre { background: #00171d; color: #a1adad !important; }
   body > pre { background: #003f50; }
   .special_formatting_quote .quote_bar { background-color: #003340; }
+  #p_thread_view_container .p-threads_view .p-threads_view__default_background { background-color: #002b36; }
   #p_thread_view_container .p-threads_view:not(.loading)::before { background: #002b36; }
   #p_thread_view_container .p-threads_view.loading::before { color: #2aa198; }
   #p_thread_view_container .p-threads_view .threads_caught_up_divider .divider_line { border-top: 1px solid #00232c; }
